# RootBrowser

./: .gitignore  LICENSE  Makefile  README.md  dev.sh  package.json  pnpm-lock.yaml  update.sh
.github/workflows/: build.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: rootbrowser.desktop
src-tauri/src/: db.rs  error.rs  fingerprint.rs  lib.rs  main.rs  models.rs
src-tauri/src/browser/: launch.rs  mod.rs  profile_launcher.rs  userjs.rs
src-tauri/src/commands/: camoufox.rs  mod.rs  notes.rs  password.rs  proxies.rs  ssh.rs  totp.rs  workspaces.rs
src-tauri/src/commands/profiles/: camoufox_config.rs  cookies.rs  crud.rs  import_export.rs  launch.rs  mod.rs
src-tauri/src/proxy/: check.rs  local.rs  mod.rs  ssh.rs
src/lib/: Icon.svelte  Modal.svelte  api.ts  gpu-presets.ts  i18n.ts  locales.ts  password-gen.ts  portal.ts  theme.ts  timezones.ts  types.ts  utils.ts
src/lib/components/: CreateProfilePanel.svelte  CustomSelect.svelte  EditProfilePanel.svelte  ExportProfileModal.svelte  ImportProfileModal.svelte  KanbanBoard.svelte  PasswordGenerator.svelte  ProfileSidePanel.svelte  ProxyPanel.svelte  RawDataPanel.svelte  TableView.svelte  TopologyGraph.svelte  TotpAddModal.svelte  TotpGenerator.svelte  TotpList.svelte  TotpPanel.svelte
src/lib/inspector/: InspectorCustomGrid.svelte  InspectorGrid.svelte  InspectorGuides.svelte  InspectorHighlight.svelte  InspectorInfoBox.svelte  (+7 more)
src/routes/: +layout.svelte  +page.svelte
(+22 files in other folders)
