[package]
name = "rootbrowser"
version = "1.0.3"
description = "Firefox Profile Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "rootbrowser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["socks", "json", "stream"] }
anyhow = "1"
which = "6"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "2"
lz4_flex = "0.11"
futures-util = "0.3"
rusqlite = "0.32"
base64 = "0.22"
sha2 = "0.10"
russh = "0.61.2"
russh-keys = "0.49.2"
async-trait = "0.1.89"
thiserror = "2.0.18"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
serde_yaml = "0.9"
notify = "6"
